@@ -1,9 +1,8 @@
 quantiletransform <- function(x){
   xNoNA <- x[!is.na(x)]
   ord <- order(xNoNA)
-  sorted <- sort(x)
-  xWithminInf <- c(-Inf,sorted)
-  nBelow <- cumsum(xWithminInf[-1] > xWithminInf[-length(xWithminInf)])
+  sorted <- sort(xNoNA)
+  nBelow <- rank(sorted, ties.method = "min")
   p <- nBelow / (max(nBelow)+1)
   q <- qnorm(p)
   xTrans <- x
